<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist Maker</string>
    <string name="No">Нет</string>
    <string name="Yes">Да</string>
    <string name="Playlist">Медиатека</string>
    <string name="Search">Поиск</string>
    <string name="Settings">Настройки</string>
    <string name="Dark_theme">Темная тема</string>
    <string name="Share">Поделиться приложением</string>
    <string name="Support">Написать в поддержку</string>
    <string name="User_Agreement">Пользовательское соглашение</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="shareMessage">Проверьте курс по Андроид-разработке в Практикуме: https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="titleShareMessage">Поделиться приложением</string>
    <string name="uriMailSupport">mailto:ivannikov.vladimir.v@yandex.ru</string>
    <string name="mailTitle">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mailText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="titleSupport">Написать в поддержку</string>
    <string name="uriUserAgreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search">Поиск</string>
</resources>