<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Main.Theme"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/MainToolbar"
        style="@style/MainToolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_16">
        <Button
            android:id="@+id/btn_search"
            android:text="@string/Search"
            app:icon="@drawable/ic_search"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/btn_playlist"
            android:text="@string/Playlist"
            app:icon="@drawable/ic_library"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/btn_settings"
            android:text="@string/Settings"
            app:icon="@drawable/ic_settings"
            style="@style/ButtonStyle"/>
    </LinearLayout>
</LinearLayout>