<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:title="@string/Settings"
        app:navigationIcon="@drawable/arrow_back"
        app:titleTextColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/Dark_theme"
            android:textStyle="normal"
            android:textSize="@dimen/text_size_16"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Share"
            android:drawableEnd="@drawable/share"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:drawablePadding="16dp"
            android:textSize="@dimen/text_size_16"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Support"
            android:drawableEnd="@drawable/support"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:drawablePadding="16dp"
            android:textSize="@dimen/text_size_16"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="?attr/selectableItemBackground"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/User_Agreement"
            android:drawableEnd="@drawable/arrow_forward"
            android:gravity="start|center_vertical"
            android:textColor="@color/black"
            android:drawablePadding="16dp"
            android:textSize="@dimen/text_size_16"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="?attr/selectableItemBackground"/>
    </LinearLayout>
</LinearLayout>